@@ -11,6 +11,7 @@
 - Reverted the incorrect GIL change done in 0.18 to m2.passphrase_callback,
   which caused a deadlock when called from mod_python for example. Thanks to
   Michal Kochel and Keith Jackson.
+- httpslib.HTTPSConnection now raises ValueError for illegal keyword argument
 - m2.pkey_write_pem[_no_cipher] changed to use the recommended (more secure)
   PEM_write_bio_PKCS8PrivateKey (used by PEM_write_bio_PrivateKey).
 - X509.load_cert, load_cert_bio, load_cert_der_string, new_stack_from_der,
